# rolling_stone

./: CMakeLists.txt  CMakeSettings.json  README.md  bitstring.c  bitstring.h  board.h  conflicts.h  deadlock.c  deadlock.h  deadsearch.c  deadsearch.h  debug.c  debug.h  dl.c  hashtable.h  ida.c  ida.h  io.c  io.h  lowerbound.c  lowerbound.h  macro.c  mark.c  mark.h  menu.c  stats.c  tree.c  tree.h  weights.h
screens/: nabokosmos.1
src/: CMakeLists.txt  board.h  conflicts.c  dl.c  gtv.c  gtv.h  hashtable.c  hashtable.h  histogram.c  histogram.h  ida.c  ida.h  init.c  init.h  io.c  io.h  macro.c  menu.c  moves.c  moves.h  pensearch.c  pensearch.h  time.c  time.h  tree.c  tree.h  weights.c
test/: CMakeLists.txt  OriginalSokobanTest.cpp  RollingStoneTest.cpp  RollingStoneTest.h  solution_test.cpp
win/: resource.h
